infra/k8s/dev/agent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agent
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: dev-agent.fursa.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: agent-svc
                port:
                  number: 8000
